--- a/src/Oleg/TestBundle/Resources/views/portfolio_view.html.twig
+++ b/src/Oleg/TestBundle/Resources/views/portfolio_view.html.twig
@@ -1,6 +1,19 @@
 {% extends "OlegTestBundle::base_view.html.twig" %}
 {% block content %}
     {% for cont in portfolio %}
-        {{cont}}<br>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">{{ cont.title }}</h3>
+            </div>
+            <div class="panel-body">
+                <p>
+                    {{ cont.description }}
+                </p>
+            </div>
+            <div class="panel-footer">
+               <a href="{{url('portfolio_view', { 'id': cont.id })}}" class="btn btn-lg btn-success btn-block edit_button">Просмотр</a>
+               <a href="" class="btn btn-lg btn-success btn-block del_button">Редактировать</a>
+            </div>
+        </div>
     {% endfor %}
 {% endblock %}
