--- a/src/Oleg/TestBundle/Resources/views/base_view.html.twig
+++ b/src/Oleg/TestBundle/Resources/views/base_view.html.twig
@@ -63,7 +63,7 @@
                         <a href="{{url('portfolio')}}">Портфолио</a>
                     </li>
                     <li>
-                        <a href="/posts?posts">Новости</a>
+                        <a href="{{url('news_index')}}">Новости</a>
                     </li>
                     <li>
                         <a href="/page?page/contacts">Контакты</a>
