add created news, auto slug and add to news category

--- a/src/Oleg/TestBundle/Resources/views/base_view.html.twig
+++ b/src/Oleg/TestBundle/Resources/views/base_view.html.twig
@@ -66,6 +66,9 @@
                         <a href="{{url('news_index')}}">Новости</a>
                     </li>
                     <li>
+                        <a href="{{url('news_index')}}">Категории</a>
+                    </li>
+                    <li>
                         <a href="/page?page/contacts">Контакты</a>
                     </li>
                     {% endblock %}
