--- a/src/Oleg/TestBundle/Resources/views/News/add_view.html.twig
+++ b/src/Oleg/TestBundle/Resources/views/News/add_view.html.twig
@@ -4,13 +4,13 @@
         <form method="post" action="{{url('news_add')}}">
             <div class="panel-heading">
                 <label>Редактировать заголовок</label>
-                <input type="text" name="title" value=""/>
+                <input type="text" name="data[title]" value=""/>
                 <label>Редактировать ссылку</label>
-                <input type="text" name="url" value=""/>
+                <input type="text" name="data[url]" value=""/>
             </div>
             <div class="panel-body">
                 <label value="" name="">Категория</label>
-                <select size="1" name="category">
+                <select size="1" name="data[category]">
                     <option></option>
                 {% for cat in category %}
                     <option value="{{ cat.slug }}">{{ cat.title|raw }}</option>
@@ -19,9 +19,9 @@
             </div>
             <div class="panel-body">
                 <label>Редактировать контент</label>
-                <textarea id="editor1" name="txt" cols="100" rows="20"></textarea>
+                <textarea id="editor1" name="data[txt]" cols="100" rows="20"></textarea>
                 <label>Редактировать описание</label>
-                <textarea id="editor2" name="description" cols="115" rows="10"></textarea>
+                <textarea id="editor2" name="data[description]" cols="115" rows="10"></textarea>
             </div>
             <button type="submit">Сохранить</button>
         </form>
