--- a/src/Oleg/TestBundle/Resources/views/base_view.html.twig
+++ b/src/Oleg/TestBundle/Resources/views/base_view.html.twig
@@ -15,10 +15,22 @@
     {% block css %}
         <link href="{{asset('/bundles/olegtest/css/bootstrap.min.css')}}" rel="stylesheet">
         <link href="{{asset('/bundles/olegtest/css/simple-sidebar.css')}}" rel="stylesheet">
+        
+        <link rel="stylesheet" href="/bundles/sonatacore/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
     {% endblock %}
+    
+    
+   
+    
+    
     
     {% block js %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        
+        <script type="text/javascript" src="/bundles/sonatacore/vendor/moment/min/moment-with-locales.min.js"></script>
+        <script type="text/javascript" src="{{asset('/bundles/olegtest/js/bootstrap.min.js')}}"></script>
+        <script type="text/javascript" src="/bundles/sonatacore/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+        
         <script type="text/javascript" src="{{asset('/bundles/olegtest/js/login.js')}}"></script>
         <script>
             $(document).ready(function(){
